monorepo_internal/kube/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oasa-server
  name: oasa-server
  namespace: oasa-telemat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oasa-server
  template:
    metadata:
      labels:
        app: oasa-server
    spec:
      containers:
      - image: localhost:5000/oasa-api:0.0.7
        # resources:
        #   requests:
        #     cpu: "250m"
        #     memory: "512Mi"
        #   limits:
        #     cpu: "500m"
        #     memory: "1Gi"
        name: oasa-server
        # volumeMounts:
        # - name: configmap-entry-vol
        #   mountPath: /bin/entrypoint.sh
        #   readOnly: true
        #   subPath: entrypoint.sh
        ports:
        - containerPort: 8082
